fix headings overflowing out of grid item on ie 10

--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ body {
 
 .cd-grid-content > h3 {
   text-transform: uppercase;
+  max-width: 100%;
 }
 
 
